--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 
 body{ 
-    @apply min-h-screen w-screen overflow-x-hidden bg-[url('/bgimg.svg')]  bg-cover bg-no-repeat ;
+    @apply min-h-screen w-screen overflow-x-hidden bg-[url('/bg.png')]  bg-cover bg-no-repeat ;
 }
 
 
